Testing my new style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Landing Page</title>
 </head>
 <body>
+<span><a href="https://dwc5572.github.io/IntroToDavid">Homepage </a>
+    <a href="/IntroToDavid/resume">Resume</a>
+    <a href="/IntroToDavid/mymajor">My Major</a>
+    <a href="/IntroToDavid/clubs">Clubs </a>
+ <a href="/IntroToDavid/album">Photo Album </a>
+<a href="/IntroToDavid/weblinks">Websites I'm Interested In</a>
+    </span>
 <h1>Welcome to David's webpage</h1>
 </body>
 </html>
