--- a/index.html
+++ b/index.html
@@ -1,17 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>Landing Page</title>
-</head>
-<body>
-<span><a href="https://dwc5572.github.io/IntroToDavid">Homepage </a>
-    <a href="/IntroToDavid/resume">Resume</a>
-    <a href="/IntroToDavid/mymajor">My Major</a>
-    <a href="/IntroToDavid/clubs">Clubs </a>
- <a href="/IntroToDavid/album">Photo Album </a>
-<a href="/IntroToDavid/weblinks">Websites I'm Interested In</a>
-    </span>
-<h1>Welcome to David's webpage</h1>
-</body>
+    <title>David Connolly</title>
+    <link rel="stylesheet"
+href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="resources/styles/styles.css">
+  </head>
+  <body>
+    <header>
+      <img src="resources/images/logo.jpeg" alt="Logo" width="200"
+        height="188">
+      <nav>
+        <ul class="nav nav-pills">
+          <li class="nav-item"><a class="nav-link active"
+              href="index.html"> HomePage</a></li>
+          <li class="nav-item"><a class="nav-link active"
+              href="education.html"> Education</a></li>
+          <li class="nav-item"><a class="nav-link active"
+              href="resume.html"> Resume</a></li>
+          <li class="nav-item"><a class="nav-link active"
+              href="workExperience.html"> Work Experience</a></li>
+          <li class="nav-item"><a class="nav-link active"
+              href="weblinks.html"> Web Links</a></li>
+          <li class="nav-item"><a class="nav-link active"
+              href="album.html"> Photo Gallery</a></li>
+        </ul>
+      </nav>
+    </header>
+    <br>
+    <div class="content">
+      <div class="sidebar">
+        <h2>Contact me</h2>
+        <form id="fs-frm" name="simple-contact-form"
+          accept-charset="utf-8"
+          action="https://formspree.io/f/mbjnyagd" method="post">
+          <fieldset id="fs-frm-inputs">
+            <div class="form-group"> <label for="full-name">Full Name</label>
+              <input class="form-control" name="name" id="full-name"
+                placeholder="First and Last" required="" type="text"> </div>
+            <div class="form-group"> <label for="email-address">Email
+                Address</label> <input class="form-control"
+                name="_replyto" id="email-address"
+                placeholder="sample@email.com" required="" type="email">
+            </div>
+            <div class="form-group"> <label for="message">Message</label>
+              <textarea class="form-control" rows="5" name="message" id="message" placeholder="Your Message" required=""></textarea>
+            </div>
+            <input name="_subject" id="email-subject" value="Contact
+              Form Submission" type="hidden"> </fieldset>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <br>
+        <div id="apiDisplay"> </div>
+        <script>
+      const div= document.getElementById('apiDisplay');
+      const url='https://api.kanye.rest/';
+      const headers = new Headers(
+              {
+                'Accept': 'application/json'
+              }
+      )
+      fetch(url, {headers}).then((response) => {return response.json();
+      })
+              .then((data) => {console.log(data);
+              let p= document.createElement('p');
+              p.innerHTML=`${data.quote}`;
+              div.appendChild(p);
+
+              })
+              .catch(function (error)
+      {
+      console.log(error);
+      })
+    </script> <br>
+        <p>-Kanye West</p>
+      </div>
+      <div class="displayContent">
+        <h1><img src="resources/images/DadDanteDavid.jpeg"
+            alt="Family photo" id="caddypic"
+            width="300px"  height="400px"></h1>
+        <h1>Welcome to David's Home Page</h1>
+        <br>
+        <p>This Web page is designed to give an overview of my
+          personality, school career, and work experience.</p>
+        <br>
+        <p>First though, I wanted to start with some basic information
+          about myself. For example My name is David Connolly, I was
+          born 6/30/2004 and am a first generation college student. I
+          have been blessed with great friends through High School and
+          College and have a wonderful girlfriend who's birthday is 4
+          days earlier than mine. I grew up playing lots of video games
+          which got me interested in how technology works and how I
+          could control it. </p>
+        <br>
+        <p>That is why I am excited to continue my studies at Penn State
+          because I know that with each passing semester my skills and
+          understanding about technology increase.</p>
+        <br>
+        <p>I grew up on a horse farm but quit riding at a young age
+          because I was more interested in golf. This interest grew out
+          of my father's love for golf. Pictured above you see me in the
+          middle with my dad and brother after I had caddied for them in
+          a tournament we won. My family is very important to me and I
+          treasure the rounds of golf I get to spend with my dad/brother
+          and all the other time I get to spend with my Mom/Sister.<br>
+        </p>
+        <p>I hope to give a good insight into what my achievements and
+          work ethic have brought me using this website.<br>
+        </p>
+      </div>
+    </div>
+    <footer>
+      <p>David Connolly <br>
+        davidwc5572@gmail.com <br>
+        215-668-0498 <br>
+        221 Acoma Lane Collegeville, PA 19426</p>
+      <a href="https://www.linkedin.com/in/david-w-connolly/"> My
+        LinkedIn</a>
+      <a href="https://github.com/dwc5572"> My Github</a>
+      <p>© Copyright 2024</p>
+    </footer>
+  </body>
 </html>
